fix missing defer

--- a/html/merajpt.html
+++ b/html/merajpt.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="/css/skeleton.css" />
     <link rel="stylesheet" href="/css/styles.css" />
     <script src="/js/nn_common.js"></script>
+    <script src="/js/common.js" defer></script>
+
     <link
       href="https://fonts.googleapis.com/css?family=Lato:400,700"
       rel="stylesheet"
@@ -142,8 +144,6 @@
         </div>
         <p id="output" class="output_box"></p>
       </div>
-
-      <script src="/js/common.js"></script>
 
       <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
       <script src="/js/bigram.js"></script>
