--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
       <div class="profile">
         <div class="content">
           <p>
-            I am a second year Master's student of Mechanical Engineering at
+            I am a second year master's student of mechanical engineering at
             Ulsan National Institute of Science and Technology (UNIST), where I
-            also completed my Bachelor's Degree in Mechanical Engineering and
-            Computer Science & Engineering.
+            also completed my bachelor's degree in mechanical engineering and
+            computer science & engineering.
           </p>
           <p>
             Currently, I am working in Autonomous Systems Laboratory (ASL) with
@@ -98,12 +98,12 @@
           </p>
           <p>
             I have also participated in several national and international
-            Physics Olympiads and been awarded with one Bronze, one Silver, and
-            one Gold medals in the span of 2 years.
+            Physics Olympiads and have been awarded with bronze, one silver, and
+            one gold medals over the span of two years.
           </p>
           <p>
             I am currently working on the safety and reliability of sequential 
-            decision making algorithms (RL/IL) and their applications to robot 
+            decision-making algorithms (RL/IL) and their applications in robot 
             autonomy. I have a broad interest in various topics, so please feel 
             free to reach out for potential projects or collaborations!
           </p>
