add a problem and edit some

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -89,7 +89,7 @@
       <!-- <img src="/cat.gif" alt="Cat GIF" /> -->
       <p class="content">
         
-        Here I challenge you with some fascinating math and physics problems
+        Here I challenge you with some interesting math and physics problems
         that I have encountered, or thought of over the years. Note that I have
         selected the problems based on the enjoyment they offer in the solution
         process, rather than their difficulty. Enjoy them!
@@ -98,6 +98,11 @@
       <p class="dt" id="dt"><span> Problems </span></p>
 
       <ol class="content problem" id="problem">
+        <li>
+          If \(A\) wins \(B\) with a probability \(p_{ab}\) and B wins \(C\) with
+          a probability \(p_{bc}\), find the probability that \(A\) wins \(C\).
+        </li>
+        <br />
         <li>
           Find the surface area and the volume of an \(n\)-dimensional sphere.
         </li>
@@ -109,7 +114,7 @@
         <li>
           Imagine two identical objects with heat capacity \(C\) and
           temperatures \(T_1\) and \(T_2\). If we were to build an engine out of
-          them, what is the maximum work that this engine can do? \(^1\)
+          them, find the maximum work that this engine can do. \(^1\)
         </li>
         <br />
         <li>
@@ -139,21 +144,21 @@
         <br />
         <li>
           Imagine a water sprinkler in the garden, sprinkling water uniformly at
-          each angle and in all directions at the same time. What radius from
-          the origin would get watered the most?
+          each angle and in all directions at the same time. Find the distance from
+          the origin that would get watered the most.
         </li>
         <br />
         <li>
           Consider a particle undergoing a one-dimensional random walk, taking
           steps of length \(a\) to the right or left with equal probability.
-          What is the probability distribution of the particle's position after
-          \(n\) steps?
+          Find the probability distribution of the particle's position after
+          \(n\) steps.
         </li>
         <br />
         <li>
           Consider a particle undergoing an \(n\)-dimensional random walk,
-          taking steps in each direction with equal probability. What is the
-          probability that the particle will come back to the origin?
+          taking steps in each direction with equal probability. Find the
+          probability that the particle will come back to the origin.
         </li>
         <br />
         <li>
