--- a/html/enigma.html
+++ b/html/enigma.html
@@ -124,9 +124,7 @@
         <br />
         <li>
           A ballistic missile is launched from the north pole, the target is at
-          the latitude \(\phi\). To have the minimal launch velocity of the
-          missile, at which angle (with respect to the horizon) do we need to
-          launch it? \(^2\)
+          the latitude \(\phi\). Find the required launch angle (with respect to the horizon) to have the minimal launch velocity. \(^2\)
         </li>
         <br />
         <li>
