--- a/html/enigma.html
+++ b/html/enigma.html
@@ -118,8 +118,8 @@
         </li>
         <br />
         <li>
-          Give the shape of a fixed-volume planet (in mathematical form) that
-          maximizes the gravitational force acting on a person standing on it.
+          Find the shape of a fixed-volume planet that maximizes the gravitational 
+          force acting on a person standing on it.
         </li>
         <br />
         <li>
