--- a/html/enigma.html
+++ b/html/enigma.html
@@ -118,8 +118,8 @@
         </li>
         <br />
         <li>
-          Find the shape of a fixed-volume planet that maximizes the gravitational 
-          force acting on a person standing on it.
+          Find the optimal shape of a planet to maximize the gravitational 
+          force acting on a person standing on a specific point on it.
         </li>
         <br />
         <li>
