--- a/html/enigma.html
+++ b/html/enigma.html
@@ -118,8 +118,7 @@
         </li>
         <br />
         <li>
-          Find the optimal shape of a planet to maximize the gravitational 
-          force acting on a person standing on a specific point on it.
+          Find the optimal shape of a planet that maximizes the gravitational force at a given point on its surface.
         </li>
         <br />
         <li>
