--- a/404.html
+++ b/404.html
@@ -31,9 +31,9 @@
 
   <body>
     <div class="container" id="container">
-      <h1><a href="/index.html">Meraj Mammadov</a></h1>
+      <h1><a href="/">Meraj Mammadov</a></h1>
       <nav class="nav">
-        <a href="/index.html">home</a>
+        <a href="/">home</a>
         <a href="/Meraj_cv.pdf">cv</a>
 
         <div class="dropdown">
