--- a/html/hangman.html
+++ b/html/hangman.html
@@ -27,10 +27,10 @@
 </head>
   <body>
     <header>
-      <h1><a href="/index.html">Meraj Mammadov</a></h1>
+      <h1><a href="/">Meraj Mammadov</a></h1>
       <nav class="nav">
 
-        <a href="/index.html" class="desktop">home</a>
+        <a href="/" class="desktop">home</a>
         <a href="/Meraj_cv.pdf" class="desktop">cv</a>
 
         <div class="dropdown desktop">
@@ -59,7 +59,7 @@
       </nav>
 
       <div class="mobile-menu" style="display: none;">
-        <a href="/index.html" class="mobile">home</a>
+        <a href="/" class="mobile">home</a>
         <a href="/Meraj_cv.pdf" class="mobile">cv</a>
         <a href="/html/merajpt.html" class="mobile">merajpt</a>
         <a href="/movie/movie.html" class="mobile">movie</a>
