--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Meraj Mammadov, master's student in mechanical engineering at UNIST, specializing in RL and IL algorithms for robot autonomy.">
     <title>Meraj Mammadov</title>
     <link rel="favicon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/css/skeleton.css" />
