changes in the description

--- a/index.html
+++ b/index.html
@@ -103,10 +103,11 @@
             one gold medals over the span of two years.
           </p>
           <p>
-            I am currently working on the safety and reliability of sequential 
-            decision-making algorithms (RL/IL) and their applications in robot 
-            autonomy. I have a broad interest in various topics, so please feel 
-            free to reach out for potential projects or collaborations!
+            I am mainly interested in sample-efficient sequential decision-making algorithms
+            and their applications to real-world problems. My current research focuses on safe 
+            learning-based collision avoidance systems for autonomous robots. I have a broad 
+            interest in various topics, so please feel free to reach out for potential projects 
+            or collaborations!
           </p>
         </div>
         <img src="/img/image.jpeg" alt="Meraj Mammadov"/>
