new problem added

--- a/html/enigma.html
+++ b/html/enigma.html
@@ -104,6 +104,10 @@
         </li>
         <br />
         <li>
+          Find a method to generate unbiased random bits (\(0\)s and \(1\)s) using a biased coin with unknown probability \(p\).
+        </li>
+        <br />
+        <li>
           Find the surface area and the volume of an \(n\)-dimensional sphere.
         </li>
         <br />        
@@ -226,7 +230,7 @@
         </li>
         <br />
         <li>
-          Prove the approximation \(n! \sim \sqrt{2\pi n} \left( \frac{n}{e} \right)^n\)   (James Stirling, 1730)
+          Prove the approximation \(n! \sim \sqrt{2\pi n} \left( \frac{n}{e} \right)^n\)   (James Stirling, 1730).
         </li>
       </ol>
       <br />
