update after PhD

--- a/index.html
+++ b/index.html
@@ -82,28 +82,46 @@
       <div class="profile">
         <div class="content">
           <p>
-            I am a second year master's student of mechanical engineering at
-            Ulsan National Institute of Science and Technology (UNIST), where I
-            also completed my bachelor's degree in mechanical engineering and
-            computer science & engineering.
+            I am a PhD student in computer science at Örebro University, Sweden and a 
+            <a
+              href="https://wasp-sweden.org"
+              >WASP</a
+            >
+            fellow. I have completed my bachelor and master's degrees in mechanical engineering 
+            in South Korea, at Ulsan National Institute of Science and Engineering.
           </p>
           <p>
-            Currently, I am working in Autonomous Systems Laboratory (ASL) with
-            the group of Professor
+            Currently, I am working at 
+            <a
+              href="http://ails.aass.oru.se"
+              >Adaptive and Interpretable Learning Systems Lab</a
+            >
+            with 
+            <a
+              href="https://scholar.google.com/citations?user=4HtJjKAAAAAJ&hl=en"
+              >Johannes Andreas Stork</a
+            >
+            and
+            <a
+              href="https://pedrozudo.github.io"
+              >Pedro Zuidberg Dos Martires</a
+            >
+            on transfer and imitation learning. I have previously worked with 
             <a
               href="https://scholar.google.com/citations?user=q_Pbm3kAAAAJ&hl=en"
               >Hyondong Oh</a
-            >. 
-            Prior to this, I had a chance to work in the Innovative
-            Thermodynamics Laboratory (ITEL) with Professor
-            <a
-              href="https://scholar.google.co.kr/citations?user=1JpaQ-QAAAAJ&hl=en"
-              >Jaeseon Lee</a>.
+            >
+            on vision-based navigation for UAVs.
           </p>
           <p>
-            I have also participated in several national and international
-            Physics Olympiads and have been awarded with bronze, one silver, and
-            one gold medals over the span of two years.
+            I have also been a part of the national team of Azerbaijan for 
+            <a
+              href="https://www.ipho-new.org"
+              >Physics Olympiads</a
+            >
+            
+             and won several awards in various national and 
+            internation competitions, including bronze, silver, and gold medals.
           </p>
           <p>
             I am mainly interested in sample-efficient sequential decision-making algorithms
