--- a/html/enigma.html
+++ b/html/enigma.html
@@ -90,8 +90,8 @@
       <p class="content">
         
         Here I challenge you with some interesting math and physics problems
-        that I have encountered, or thought of over the years. Note that I have
-        selected the problems based on the enjoyment they offer in the solution
+        that I have encountered, or thought of over the years. The problems 
+        are selected based on the enjoyment they offer in the solution
         process, rather than their difficulty. Enjoy them!
       </p>
 
