--- a/html/enigma.html
+++ b/html/enigma.html
@@ -230,7 +230,7 @@
         </li>
         <br />
         <li>
-          Prove the approximation \(n! \sim \sqrt{2\pi n} \left( \frac{n}{e} \right)^n\)   (James Stirling, 1730).
+          Derive the approximation \(n! \sim \sqrt{2\pi n} \left( \frac{n}{e} \right)^n\)   (James Stirling, 1730).
         </li>
       </ol>
       <br />
