--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="This is Meraj Mammadov's personal website. 
-    He is a master's student at UNIST, South Korea. He is interested in statistical learning,
-    sequential decision making and lots of other things. Here you can explore some of his personal
-    projects." />
+    <meta name="description" content="Meraj Mammadov — PhD student and WASP 
+    fellow at Örebro University. Research and personal projects in imitation 
+    learning and sequential decision making." />
     <title>Meraj Mammadov</title>
     <link rel="favicon" type="image/x-icon" href="/favicon.ico" />
     <link rel="stylesheet" href="/css/skeleton.css" />
