--- a/movie/index.html
+++ b/movie/index.html
@@ -37,15 +37,15 @@
       <div class="dropdown desktop">
         <button onclick="ProjectsMenuFunction()" class="dropbtn" id="dropbtn">projects</button>
         <div id="myDropdown" class="dropdown-content">
-          <a href="/html/merajpt.html">merajpt</a>
-          <a href="/movie/movie.html">movie</a>
-          <a href="/html/sdr.html">sdr</a>
-          <a href="/html/hangman.html">hangman</a>
+          <a href="/merajpt/index.html">merajpt</a>
+          <a href="/movie/index.html">movie</a>
+          <a href="/sdr/index.html">sdr</a>
+          <a href="/hangman/index.html">hangman</a>
         </div>
       </div>
 
-      <a href="/html/enigma.html" class="desktop">enigma</a>
-      <a href="/html/contact.html" class="desktop">contact</a>
+      <a href="/enigma/index.html" class="desktop">enigma</a>
+      <a href="/contact/index.html" class="desktop">contact</a>
 
       <strong id="mobile-menu-btn" class="menu-button mobile">
         <div class="line" style="width: 30px;"></div>
@@ -62,12 +62,12 @@
     <div class="mobile-menu" style="display: none;">
       <a href="/" class="mobile">home</a>
       <a href="/Meraj_cv.pdf" class="mobile">cv</a>
-      <a href="/html/merajpt.html" class="mobile">merajpt</a>
-      <a href="/movie/movie.html" class="mobile">movie</a>
-      <a href="/html/sdr.html" class="mobile">sdr</a>
-      <a href="/html/hangman.html">hangman</a>
-      <a href="/html/enigma.html" class="mobile">enigma</a>
-      <a href="/html/contact.html" class="mobile">contact</a>
+      <a href="/merajpt/index.html" class="mobile">merajpt</a>
+      <a href="/movie/index.html" class="mobile">movie</a>
+      <a href="/sdr/index.html" class="mobile">sdr</a>
+      <a href="/hangman/index.html">hangman</a>
+      <a href="/enigma/index.html" class="mobile">enigma</a>
+      <a href="/contact/index.html" class="mobile">contact</a>
     </div>
   </header>
 
