--- a/404.html
+++ b/404.html
@@ -39,14 +39,14 @@
         <div class="dropdown">
           <button onclick="ProjectsMenuFunction()" class="dropbtn" id="dropbtn">projects</button>
           <div id="myDropdown" class="dropdown-content">
-            <a href="/html/merajpt.html">merajpt</a>
-            <a href="/movie/movie.html">movie</a>
+            <a href="/merajpt/index.html">merajpt</a>
+            <a href="/movie/index.html">movie</a>
             <a href="/html/life.html">life</a>
           </div>
         </div>
 
-        <a href="/html/enigma.html">enigma</a>
-        <a href="/html/contact.html">contact</a>
+        <a href="/enigma/index.html">enigma</a>
+        <a href="/contact/index.html">contact</a>
 
         <div class="darkmode-container">
           <input type="checkbox" class="dark-mode-toggle" id="dark-mode-toggle" />
